--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=scm2.0
-server.baseUrl=${BASE_URL:http://3.139.238.149:8082}
+server.baseUrl=${BASE_URL:http://localhost:8082}
 server.port=${SERVER_PORT:8081}
 # mysql database configurations
 #data source url
